# FairRoot

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  .zenodo.json  AUTHORS  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  COPYRIGHT  CTestConfig.cmake  CTestCustom.cmake  DEPENDENCIES  Dart.sh  Dart_Continuous.sh  Dart_Dispatcher.sh  Dockerfile  FairBase_test.cmake  FairRoot_build_test.cmake  FairRoot_doxygen_test.cmake  FairRoot_format_test.cmake  FairRoot_profile_test.cmake  FairRoot_test.cmake  Jenkinsfile  README.md  README1.md  ___g_test_fair_module_8cxx_source.html  ___g_test_fair_tools_8cxx_source.html  ___g_test_fair_tools_new_8cxx_source.html  ___test_fair_tools_8cxx_source.html  _data_type_8cxx_source.html  _data_type_8h_source.html  _event_display_link_def_8h_source.html  _experiment_8cxx_source.html  _experiment_8h_source.html  _fair_ana_selector_8cxx_source.html  _fair_ana_selector_8h_source.html  _fair_ascii_generator_8cxx_source.html  (+2950 more)
MbsAPI/: CMakeLists.txt  README.dox  README.md  clnt_buf_def.h  err_mask_def.h  errnum_def.h  fLmd.c  fLmd.h  f_evcli.c  f_evcli.h  f_evt.c  f_evt.h  f_find_peaks.c  f_find_peaks.h  f_his_hist.c  f_his_hist.h  f_his_swpbas.c  f_his_swpbas.h  f_his_toupper.c  f_his_toupper.h  f_mbs_status.c  f_radware.c  f_radware.h  f_stccomm.c  f_stccomm.h  f_swaplw.c  f_swaplw.h  f_ut_compress.c  f_ut_compress.h  f_ut_seg_show.c  f_ut_status.c  f_ut_status.h  f_ut_time.c  f_ut_utime.c  f_ut_utime.h  f_ut_wild.c  f_ut_wild.h  gps_sc_def.h  m_histo_conv.c  ml_def.h  (+39 more)
alignment/: CMakeLists.txt  FairAlignmentHandler.cxx  FairAlignmentHandler.h  LinkDef.h  README.dox  readme.md
base/: CMakeLists.txt  CbmBaseContFact.cxx  CbmBaseContFact.h  CbmBaseParSet.cxx  CbmBaseParSet.h  CbmDetector.cxx  CbmDetector.h  CbmDoubleHit.cxx  CbmDoubleHit.h  CbmEventHeader.cxx  CbmEventHeader.h  CbmField.cxx  CbmField.h  CbmFieldFactory.cxx  CbmFieldFactory.h  CbmGenerator.cxx  CbmGenerator.h  CbmGenericStack.cxx  CbmGenericStack.h  CbmHit.cxx  CbmHit.h  CbmIon.cxx  CbmIon.h  CbmLinkDef.h  CbmMCApplication.cxx  CbmMCApplication.h  CbmMCEventHeader.cxx  CbmMCEventHeader.h  CbmMCPoint.cxx  CbmMCPoint.h  CbmModule.cxx  CbmModule.h  CbmParticle.cxx  CbmParticle.h  CbmPrimaryGenerator.cxx  CbmPrimaryGenerator.h  CbmRadLenManager.cxx  CbmRadLenManager.h  CbmRadLenPoint.cxx  CbmRadLenPoint.h  (+132 more)
basemq/: CMakeLists.txt  FairMCPointBoostSerializationSupport.h  FairMQ.h  FairRunFairMQDevice.h  FairTimeStampBoostSerializationSupport.h  README.dox
cbmg4/: CMakeLists.txt  CbmG4LinkDef.h  CbmRunConfiguration.cxx  CbmRunConfiguration.h  CbmSpecialStackingAction.cxx  CbmSpecialStackingAction.h  Makefile.am  RichTbPhysicsList.cxx  RichTbPhysicsList.h
cmake/: BuildOptions.cmake  CMakeLists.txt  Compiler.cmake  Dependencies.cmake  FairRootChecks.cmake  FairRootConfig.cmake.in  FairRootFindPackage2.cmake  FairRootLib.cmake  FairRootSummary.cmake  FairRootTargetRootDictionary.cmake  FairRootUtils.cmake  FindGeant3.cmake  FindGeant4.cmake  FindGeant4VMC.cmake  FindHEPMC.cmake  FindPythia6.cmake  FindPythia8.cmake  Installation.cmake  Misc.cmake  README.md  Runtime.cmake  Sources.cmake
datamatch/: CMakeLists.txt  FairMCDataCrawler.cxx  FairMCDataCrawler.h  FairMCEntry.cxx  FairMCEntry.h  FairMCList.cxx  FairMCList.h  FairMCMatch.cxx  FairMCMatch.h  FairMCMatchCreatorTask.cxx  FairMCMatchCreatorTask.h  FairMCMatchLinkDef.h  FairMCMatchLoaderTask.cxx  FairMCMatchLoaderTask.h  FairMCMatchSelectorTask.cxx  FairMCMatchSelectorTask.h  FairMCObject.cxx  FairMCObject.h  FairMCResult.cxx  FairMCResult.h  FairMCStage.cxx  FairMCStage.h  FairMCTrackEnumAssociator.h  LinkDef.h  README.dox  README.md
db/: CMakeLists.txt  FairDBLinkDef.h
dbase/: CMakeLists.txt  FairDBLinkDef.h  README.md
doxygen/: CMakeLists.txt  README.md  doc_makeall.sh.in  doxyfile.in  fairDoxy.conf  singleton.dox
eventdisplay/: CMakeLists.txt  EventDisplayLinkDef.h  FairBoxSet.cxx  FairBoxSet.h  FairBoxSetDraw.cxx  FairBoxSetDraw.h  FairBoxSetEditor.cxx  FairBoxSetEditor.h  FairEveAnimationButton.cxx  FairEveAnimationButton.h  FairEventManager.cxx  FairEventManager.h  FairEventManagerEditor.cxx  FairEventManagerEditor.h  FairGetEventTime.cxx  FairGetEventTime.h  FairGetEventTimeTask.cxx  FairGetEventTimeTask.h  FairHitDraw.cxx  FairHitDraw.h  FairHitPointSetDraw.cxx  FairHitPointSetDraw.h  FairMCPointDraw.cxx  FairMCPointDraw.h  FairMCStack.cxx  FairMCStack.h  FairMCTracks.cxx  FairMCTracks.h  FairMCTracksEditor.cxx  FairMCTracksEditor.h  FairPointSetDraw.cxx  FairPointSetDraw.h  FairTimeStampPointDraw.cxx  FairTimeStampPointDraw.h  FairTimebasedMCHitDraw.cxx  FairTimebasedMCHitDraw.h  FairTimebasedMCPointDraw.cxx  FairTimebasedMCPointDraw.h  FairTrackCandDraw.cxx  FairTrackCandDraw.h  (+6 more)
example/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
fairfastsim/: CMakeLists.txt  FairFastSimDetector.h
fairmq/: CMakeLists.txt  FairMQ.h  FairMQChannel.cxx  FairMQChannel.h  FairMQDevice.cxx  FairMQDevice.h  FairMQLogger.cxx  FairMQLogger.h  FairMQMessage.cxx  FairMQMessage.h  FairMQParts.h  FairMQPoller.cxx  FairMQPoller.h  FairMQSocket.cxx  FairMQSocket.h  FairMQStateMachine.cxx  FairMQStateMachine.h  FairMQTransportFactory.h  FairMQTransports.h  FairMQUnmanagedRegion.h  FairRunFairMQDevice.h
fairroot/: CMakeLists.txt
fairtools/: CMakeLists.txt  FairLogger.cxx  FairLogger.h  FairMemory.cxx  FairMemory.h  FairMonitor.cxx  FairMonitor.h  FairSystemInfo.cxx  FairSystemInfo.h  FairTeeStream.cxx  FairTeeStream.h  FairToolsLinkDef.h  LinkDef.h  README.dox  README.md  teebuf.h
geane/: CMakeLists.txt  CbmGeane.cxx  CbmGeane.h  CbmGeanePro.cxx  CbmGeanePro.h  FairGeane.cxx  FairGeane.h  FairGeaneNew.cxx  FairGeaneNew.h  FairGeanePro.cxx  FairGeanePro.h  FairGeaneProNew.cxx  FairGeaneProNew.h  GeaneLinkDef.h  GeaneMCApplication.cxx  GeaneMCApplication.h  Makefile.am  README.dox  README.md
generators/: CMakeLists.txt  CMakeLists.txt_pythia6  CbmAsciiGenerator.cxx  CbmAsciiGenerator.h  CbmBoxGenerator.cxx  CbmBoxGenerator.h  CbmEvtGenGenerator.cxx  CbmEvtGenGenerator.h  (+56 more)
(+19321 files in other folders)
